# libgsm0710

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  gsm0710-1.0.pc.in
src/: Makefile.am  gsm0710-1.0.vapi  gsm0710.c  gsm0710.h
